--- a/Aplicacion/src/main/resources/application.properties
+++ b/Aplicacion/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #Conect to database
-spring.datasource.url=jdbc:postgresql://localhost:5432/persona
+spring.datasource.url=jdbc:postgresql://localhost:5432/springAplicacion
 spring.jpa.properties.hibernate.default_schema=public
 spring.datasource.username=postgres
 spring.datasource.password=12345
@@ -14,6 +14,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql = true
 
 #Crea las tablas
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto = create
 
